# ApiUI

./: .gitignore  Claude.md  README.md  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
agent/: .vulture_whitelist.py  __init__.py  _langchain_types.py  constants.py  core.py  crypto.py  display_tools.py  lint.sh  meta_tools.py  openapi_tools.py  pyproject.toml  pyrightconfig.json  pytest.ini  server.py  session.py
agent/config/: agent_config.example.json  agent_config.json  inaturalist.json  restcountries.json  system_prompt.txt  system_prompt_github.txt  system_prompt_inaturalist.txt  system_prompt_restcountries.txt
agent/specs/: inaturalist.json  restcountries.json
agent/tests/: conftest.py  test_agent.py  test_api_endpoints.py  test_display_tools.py  test_meta_tools.py  test_openapi_tools.py  test_server.py  test_session.py
agent/tests/expensive/: test_chat_endpoint.py  test_integration.py
docs/: SPEC.md  meta-tools.md
flutter_app/: DESIGN_SYSTEM.md  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/inspiration/: Urls.md
flutter_app/integration_test/: widget_test.dart
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/src/: api_client.dart  chat_api.dart  chat_screen.dart  message_widget.dart  models.dart  oauth_handler.dart  retry.dart
flutter_app/test/: api_client_test.dart  widget_test.dart  widget_test_helpers.dart
scripts/: app.sh  backend.sh  run.sh  run_app.sh  run_backend.sh  run_integration_tests.sh  start_backend.sh
(+20 files in other folders)
